[package]
name = "wasmpng"
version = "0.1.3"
edition = "2018"
license = "MIT"
authors = ["Roy Jacobs <roy.jacobs@gmail.com>"]
repository = "https://github.com/datatrash/wasm-png"
readme = "README.md"
keywords = ["wasm", "png", "compression", "pnginator", "demoscene"]
homepage = "https://github.com/datatrash/wasm-png"
description = "Combines a Javascript and WASM file into a single executable polygot PNG+HTML file"

[dependencies]
anyhow = "1"
argh = "0.1"
fs-err = "2"
libwebp-sys = "0.8"
lodepng = "3"
zopfli = "0.7"
